<resources>
    <string name="app_name">CellWatch Sharing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Go back</string>
    <string name="action_sign_in_short">Sign Up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="titlebar_public_Announcement">CELLWATCH</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="title_activity_technicient">TechnicientActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_technician">TechnicianActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_names">Display name</string>
    <string name="induce_smile">Delaroy Studios</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_bio">Bio</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="validation_email">You must enter you Email</string>
    <string name="validation_password">You must enter your password</string>
    <string name="sign_in_process">Signing in...</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="upload_failed">Upload failed! Please try again</string>
    <string name="alert_internet_connection">Please check your internet connectivity and try again</string>
    <string name="ok">OK</string>
    <string name="toolbar_edit_profile_info">Edit Profile Information</string>
    <string name="alert_short_password">Password is too short, Enter at least 6 digits</string>
    <string name="sign_up_process">Signing up...</string>
    <string name="toolbar_task_detail">Task Detail</string>
    <string name="image_type">image/*</string>
    <string name="select_picture">Select Picture</string>
    <string name="alert_check_emailpassword">Login failed. Please check your email and password</string>
    <string name="toobar_technicians">Technicians</string>
    <string name="toobar_tasks">Tasks</string>
    <string name="toolbar_config">Configuration</string>
    <string name="create_a_new_task_for_technicians">Create a new task for technicians</string>
    <string name="txt_submit_task">Successful Added</string>
    <string name="exit_app_desc">Do you want to exit now?</string>
    <string name="exit_app_dialog_title">Quit app</string>
    <string name="txt_invalid_email_format">You seem enter the incorrect address format</string>
    <string name="prompt_choose_technician">Choose technnician below to assign task for them</string>
    <string name="gps_network_not_enabled">GPS NOT ENABLE</string>
    <string name="open_location_settings">LOCATION SETTING</string>
    <string name="Cancel">Cancel</string>
</resources>
