<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextLight"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/personal_details"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Name"
                        android:textSize="@dimen/medium_font" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/profile_name_wrapper"
                        android:layout_width="match_parent"
                        android:layout_weight="5"
                        app:errorEnabled="true"
                        app:hintEnabled="false"
                        android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/edit_profile_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/colorTextDark"
                        android:textSize="@dimen/medium_font" />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Bio"
                        android:textSize="@dimen/medium_font" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/profile_bio_wrapper"
                        android:layout_width="match_parent"
                        android:layout_weight="5"
                        app:errorEnabled="true"
                        app:hintEnabled="false"
                        android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/profile_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="5"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/edit_profile_bio"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/colorTextDark"
                        android:textSize="@dimen/medium_font" />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Phone"
                        android:textSize="@dimen/medium_font" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/profile_phone_wrapper"
                        android:layout_width="match_parent"
                        app:errorEnabled="true"
                        android:layout_weight="5"
                        app:hintEnabled="false"
                        android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/profile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="5"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/edit_profile_phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/colorTextDark"
                        android:textSize="@dimen/medium_font" />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Email"
                        android:textSize="@dimen/medium_font" />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/profile_email_wrapper"
                        android:layout_width="match_parent"
                        android:layout_weight="5"
                        app:errorEnabled="true"
                        app:hintEnabled="false"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/ed_profile_hobby"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:fontFamily="sans-serif-light"
                            android:hint="Email"
                            android:maxLines="1"
                            android:padding="12dp"
                            android:textColor="@color/colorTextDark"
                            android:textSize="@dimen/medium_font" />
                    </android.support.design.widget.TextInputLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Contract Date"
                        android:textSize="@dimen/medium_font" />

                    <Button
                        android:id="@+id/btnExpirationDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/style_button_border_only"
                        android:drawableStart="@android:drawable/ic_menu_my_calendar"
                        android:text="Select contract date"
                        android:textColor="@android:color/darker_gray" />


                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

